--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -6,5 +6,8 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
 
 line_length: 300
 
-disabled_rules: 
+disabled_rules:
 - multiple_closures_with_trailing_closure
+
+identifier_name:
+  allowed_symbols: "_"
