--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,7 +1,7 @@
 excluded: # paths to ignore during linting. Takes precedence over `included`.
 - Carthage
 - Pods
-- BankShift/API.swift
+- iOS-Template/API.swift
 - vendor
 
 line_length: 300
