--- a/ios-template/.swiftlint.yml
+++ b/ios-template/.swiftlint.yml
@@ -12,6 +12,7 @@ disabled_rules:
 - nesting
 - discouraged_direct_init
 - multiple_closures_with_trailing_closure
+- orphaned_doc_comment
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
 - Carthage
