Add code coverage scheme

--- a/iOS-Template.xcodeproj/xcshareddata/xcschemes/iOS-Template.xcscheme
+++ b/iOS-Template.xcodeproj/xcshareddata/xcschemes/iOS-Template.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "618A31F125FF55E9007CEEDF"
+            BuildableName = "iOS-Template.app"
+            BlueprintName = "iOS-Template"
+            ReferencedContainer = "container:iOS-Template.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
