--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -29,4 +29,11 @@ file_length:
 cyclomatic_complexity:
     warning: 15
     error: 25
+nesting:
+    type_level:   
+        warning: 4
+        error: 10
+    statement_level:
+        warning: 5
+        error: 10
 reporter: "xcode"
