--- a/Template/Prod.plist
+++ b/Template/Prod.plist
@@ -45,6 +45,8 @@
 	<string>Main</string>
 	<key>server_url</key>
 	<string>${server_url}</string>
+	<key>itunes_base_url</key>
+	<string>${itunes_base_url}</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
