--- a/TemplateTests/Info.plist
+++ b/TemplateTests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>itunes_base_url</key>
+	<string>${itunes_base_url}</string>
 </dict>
 </plist>
