code clean up and coverage > 70

--- a/Template/Dev.plist
+++ b/Template/Dev.plist
@@ -20,6 +20,13 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>Transport</key>
+	<string></string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -58,9 +65,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>server_url</key>
-	<string>${server_url}</string>
 	<key>itunes_base_url</key>
 	<string>${itunes_base_url}</string>
+	<key>server_url</key>
+	<string>${server_url}</string>
 </dict>
 </plist>
